--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ dependencyResolutionManagement {
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
         maven { url 'https://jitpack.io' }
+        maven { url 'https://repo1.maven.org/maven2/' }
     }
 }
 rootProject.name = "ScaleCustomerCheck-SH"
