--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,11 +88,19 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     api 'com.github.fondesa:recycler-view-divider:3.3.0'
 
-    implementation "androidx.camera:camera-core:1.1.0-alpha03"
-    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha03"
-    implementation "androidx.camera:camera-camera2:1.1.0-alpha03"
-    implementation "androidx.camera:camera-view:1.0.0-alpha23"
-    implementation "androidx.camera:camera-extensions:1.0.0-alpha23"
+
+    def camerax_version = '1.1.0-alpha07'
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation 'androidx.camera:camera-view:1.0.0-alpha27'
+
+//    implementation "androidx.camera:camera-core:1.1.0-alpha03"
+//    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha03"
+//    implementation "androidx.camera:camera-camera2:1.1.0-alpha03"
+//    implementation "androidx.camera:camera-view:1.0.0-alpha23"
+//    implementation "androidx.camera:camera-extensions:1.0.0-alpha23"
+
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     api 'com.liulishuo.filedownloader:library:1.7.7'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
